code6/c_test_compat128.c.error
c_test_compat128.c:13:9: error: flexible array member 'a' with type 'int[]' is not at the end of struct
   13 |     int a[];
      |         ^
c_test_compat128.c:14:9: note: next field declaration is here
   14 |     int b;
      |         ^
1 error generated.
